[b]Version 0.6.8[/b]:

(2009-04-06)
 * Pass to mplayer "-vc ffh264vdpau,ffmpeg12vdpau,ffwmv3vdpau,ffvc1vdpau," if
   using vdpau as video driver and not other video codec has been set.
   (Untested)

(2009-04-02)
 * Now the mouse cursor is hidden only when playing.

(2009-04-01)
 * (Fix) The preferences dialog sets the default video driver to "direct3d,"
   if using Windows Vista.

(2009-03-26)
 * Added ogv to the list of extensions (for video).

(2009-03-25)
 * (Linux) Using -input nodefault-bindings:conf=/dev/null to disable the 
   mplayer keys if using mplayer >= SVN r29058.

(2009-03-23)
 * (Experimental) Now some of the submenus can be added to the toolbars
   (actions names: speed_menu, videotrack_menu, screen_menu, videosize_menu, 
   panscan_menu, aspect_menu, deinterlace_menu, videofilter_menu, rotate_menu, 
   ontop_menu, audiotrack_menu, audiofilter_menu, audiochannels_menu, 
   stereomode_menu, subtitlestrack_menu, titles_menu, chapters_menu, 
   angles_menu, osd_menu).

(2009-03-22)
 * Added an icon for the next_aspect action. Contributed by TT 
   (http://smplayer.berlios.de/forums/viewtopic.php?id=1104).

(2009-03-20)
 * The subtitle and audio delay actions keep now the file paused. They also
   display the current value in the status bar.

(2009-03-19)
 * Added some icons for: Help -> Tips, Video -> Preview, Video -> Start/stop
   taking screenshots, Subtitles -> Find subtitles on opensubtitles.org and
   updated the Qt logo (taken from the Qt sources).

(2009-03-18)
 * (Videopreview) Ctrl+H toggles displaying the info about the video.
 * Don't use "set_property switch_video" when using the nsv demuxer. It makes
   mplayer stop displaying the video after a few seconds.
 * Added a new option: Video -> Start/stop taking screenshots (of each frame)
   assigned by default to "Shift+D" (the icon for this action: screenshots.png)
   When this option is selected, a screenshot will be taken (and saved in